# OpenGL-Template-2

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Main.cpp.4B8DBDF4DE477B05.idx  _fixes.hpp.2D891A75F2C3F8FA.idx  _vectorize.hpp.5CB50F19EEBD1489.idx  common.hpp.3F639E9358FEBC58.idx  compute_common.hpp.F8A71129B8FC5738.idx  compute_vector_relational.hpp.EB06CEDC7F60CFCE.idx  constants.hpp.2AD28CFF638246A3.idx  constants.inl.B6EA53AA3E77F666.idx  context.c.CE40267AD99BFB88.idx  dual_quaternion.hpp.4E6D1F52510AD597.idx  dual_quaternion.inl.F6086B0029B43BF4.idx  egl_context.c.BEBDB30352673AF2.idx  epsilon.hpp.7D77A2ED885A1BAB.idx  epsilon.inl.693ED286F8AED09B.idx  exponential.hpp.BBF2181CE6C55A21.idx  fractional-scale-v1-client-protocol-code.h.70407DA7DC23B0FF.idx  fractional-scale-v1-client-protocol.h.81786C3B1C0389BB.idx  func_common.inl.05763292552E7449.idx  func_exponential.inl.E1B27AA39D8B0968.idx  func_geometric.inl.4A42DE431DC7B7DE.idx  func_integer.inl.927B48A6AF9912ED.idx  func_matrix.inl.53791527E9E6DB4C.idx  func_packing.inl.4BDDC7ED52339B92.idx  func_trigonometric.inl.E87DDB8189BED71A.idx  func_vector_relational.inl.60E6CBA57FFA7C8F.idx  fwd.hpp.F38379200EA5434D.idx  geometric.hpp.2B8A340BE85DAD4A.idx  glad.c.A8558EF79A94B33D.idx  glad.h.BA5738A27283252C.idx  glfw3.h.A138C0CDE0719674.idx  glfw3native.h.3FECBFEB71672ECF.idx  glm.cpp.FA33570CDDB3D6A2.idx  glm.hpp.0DE46A0741233A02.idx  glx_context.c.33A43F1A7910330E.idx  idle-inhibit-unstable-v1-client-protocol-code.h.A9C799EF74F06E7E.idx  idle-inhibit-unstable-v1-client-protocol.h.2DF7D7DC689AF2FA.idx  init.c.A820C61031B2E6F0.idx  input.c.7DA42A80B8B5F0FB.idx  integer.hpp.0E080CDABC764BDE.idx  internal.h.289C5748B63EDEF8.idx  (+204 more)
assets/shaders/: dummy.txt
include/OpenGLProject/: App.h
src/: App.cpp  Main.cpp  main.cpp
